<?xml version="1.0"?>
<package>
  <name>navigation_with_lidar</name>
  <version>0.1.0</version>
  <description>Basic lidar system of behaviors</description>

  <maintainer email="raul.cruz.benita@alumnos.upm.es">Raúl Cruz Benita</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>behavior_execution_manager</build_depend>
  <build_depend>droneMsgsROS</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>aerostack_msgs</build_depend>
  <build_depend>behavior_execution_manager_msgs</build_depend>
  <build_depend>belief_manager_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>behavior_execution_manager</run_depend>
  <run_depend>droneMsgsROS</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>aerostack_msgs</run_depend>
  <run_depend>behavior_execution_manager_msgs</run_depend>
  <run_depend>belief_manager_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/navigation_with_lidar.xml" />
  </export>
</package>
